# LlamaStudio

./: .WORK.md.swp  .gitignore  .pre-commit-config.yaml  AGENTS.md  DEV.md  README.md  Report.md  WORK.md  check_gpu.py  llamastudio.desktop  package-lock.json  package.json  pyproject.toml  requirements.txt  ruff.toml  start.py
.antigravitycli/: 034d8a9e-5f7c-4352-81cf-540f511c6fe1.json
.github/workflows/: package.yml  publish.yml  release-label-check.yml  ruff.yml  tests.yml
app/: __init__.py  chat.py  cli.py  config.py  config_store.py  conversations.json  downloader.py  gpu_utils.py  launcher.py  logger.py  main.py  model_manager.py  model_settings.json  server_manager.py  tools.py
app/templates/: index.html
tests/: local_test_models.json  test_all.sh  test_all_bash.sh  test_chat.py  test_cli.py  test_config_store.py  test_downloader.py  test_gpu.py  test_launcher.py  test_local_models.py  test_models.py  test_regex.py  test_sandbox.py  test_server_manager.py
tests/frontend/: chat_features.test.js  gpu.test.js  models.test.js
